# multisig-rs

./: Cargo.toml  LICENSE  README.md
src/: crypto.rs  error.rs  lib.rs  main.rs  transaction.rs  wallet.rs
tests/: integration_tests.rs
