[package]
name = "multisig-rs"
version = "0.1.0"
edition = "2021"
authors = ["Cherrypick14"]

[dependencies]
secp256k1 = { version = "0.29", features = ["rand", "serde"] }
rand = "0.8"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"

[dev-dependencies]
criterion = "0.5"
